Documentation edits made through Mintlify web editor

--- a/plugins/quick-start.mdx
+++ b/plugins/quick-start.mdx
@@ -1,8 +1,7 @@
 ---
 title: "Quick Start"
+description: "This guide will help you get up and running with a Framer Plugin."
 ---
-
-This guide will help you get up and running with a Framer Plugin.
 
 ## Installation
 
